--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <script src="script.js"></script>
+    <p id="title">Etch-a-Sketch</p>
+    <div id="wrapper">
+        <div id="container"></div>
+        <script src="script.js"></script>
+    </div>
 </body>
 </html>
