--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,17 @@
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <p id="title">Etch-a-Sketch</p>
+    <div id="buttons">
+        <button id="new">New Grid Size</button>
+        <button id="clear">Clear Grid</button>
+    </div>
     <div id="wrapper">
         <div id="container"></div>
         <script src="script.js"></script>
     </div>
 </body>
+
 </html>
