Added resetGrid Function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="title">Etch-a-Sketch</p>
     <div id="buttons">
         <button id="new">New Grid Size</button>
-        <button id="clear">Clear Grid</button>
+        <button id="clear">Reset Grid</button>
     </div>
     <div id="wrapper">
         <div id="container"></div>
