Added Custom Shooting Stars Background

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
     <p id="title">Etch-a-Sketch</p>
+    <div class="stars"></div>
+    <div class="shooting-star"></div>
+    <div class="shooting-star"></div>
+    <div class="shooting-star"></div>
+    <div class="shooting-star"></div>
     <div id="buttons">
         <button id="new">New Grid Size</button>
         <button id="clear">Reset Grid</button>
