Added Footer and GitHub

--- a/index.html
+++ b/index.html
@@ -25,5 +25,17 @@
         <script src="script.js"></script>
     </div>
 </body>
+<footer id="footer">
+    <p>
+        Copyright &copy; 
+        <script>
+            document.write(new Date().getFullYear())
+        </script>
+        Tony Li
+    </p>
+    <a href="https://github.com/TonyLi0916" target="_blank">
+        <img id="github" src="github-mark.svg">
+    </a>
+</footer>
 
 </html>
