Added Colorpicker along with Color and Rainbow Modes

--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@
     <div class="shooting-star"></div>
     <div class="shooting-star"></div>
     <div class="shooting-star"></div>
+
     <div id="buttons">
+        <input type="color" id="colorPicker" value="#000000"> 
+        <button id="color">Color Mode</button>
+        <button id="rainbow">Rainbow Mode</button>
         <button id="new">New Grid Size</button>
         <button id="clear">Reset Grid</button>
     </div>
     <div id="wrapper">
         <div id="container"></div>
-        <script src="script.js"></script>
     </div>
+
+    <script src="script.js"></script>
 </body>
 <footer id="footer">
     <p>
-        Copyright &copy; 
+        Copyright &copy;
         <script>
             document.write(new Date().getFullYear())
         </script>
